# Geek-Clock

./: CMakeLists.txt  geekclock.cpp  geekclock.h  geekclock.svgz  plasma-applet-geekclock.desktop
